--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <link rel="stylesheet" href="bluestyle.css" />
   </head>
   <body>
     <h1>Hello World</h1>
     <p>this is the first file in my new Git Repo.</p>
+    <p>A new line in our file</p>
   </body>
 </html>
