--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <h2>this line is added in the branch only.</h2>
     <p>this is the first file in my new Git Repo.</p>
     <p>A new line in our file</p>
   </body>
