added a new line h3 in the working directory in branch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <h1>Hello World</h1>
     <h2>this line is added in the branch only.</h2>
+    <h3>this is another line added in the branch only.</h3>
     <p>this is the first file in my new Git Repo.</p>
+    git status
+
     <p>A new line in our file</p>
   </body>
 </html>
